# call_jax_from_cpp

./: .gitignore  .gitmodules  Makefile  README.md  compile_xla_runtime.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
artifacts/: pjrt_c_api_cpu.h
src/: aot_example.cpp  hlo.proto  jax_example.py  lc0_example.cpp  pjrt.cc  pjrt_c_api_cpu.h
src/examples/: aot_api_example.cpp  aot_example.cpp  aot_jax2exec_example.cpp  jax_bare_metal.py  jax_example.py  jax_jax2exec.py  lc0_example.cpp
src/jax2exec/: hlo_pb2.py  jax2exec.py
src/lc0/: pjrt.cc
src/pjrt_exec/: pjrt_api.h  pjrt_exec.cpp  pjrt_exec.h  pjrt_exec.hpp
src/xla/: pjrt_c_api_cpu.h
