[project]
name = "jax2exec"
version = "0.1.0"
description = "Tooling for converting jax functions into serialized executables."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Brent Koogler", email = "brkhnc@umsystem.edu"},
]
keywords = [
  "jax",
  "C++",
  "serialize",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "jax==0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/jax2exec"]

[tool.ruff]
line-length = 80

[tool.pyright]
typeCheckingMode = "standard"
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
